tests/machine/x/pascal/map_nested_assign.error
line: 23
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/map_nested_assign.pas
map_nested_assign.pas(18,36) Error: Incompatible type for arg no. 2: Got "TFPGMap<System.ShortString,System.LongInt>", expected "Variant"
map_nested_assign.pas(19,11) Error: Incompatible types: got "TFPGMap<System.ShortString,System.Variant>" expected "TFPGMap<System.ShortString,main.TFPGMap<System.ShortString,System.LongInt>>"
map_nested_assign.pas(23) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

